# nesting-autotools

./: Makefile.am  README.md  autogen.sh  configure.ac
src/: Makefile.am  main.cpp
